--- a/package.json
+++ b/package.json
@@ -1,21 +1,39 @@
 {
-  "name": "react-native-image-sequence",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/madsleejensen/react-native-image-sequence.git"
+  "_from": "react-native-image-sequence@latest",
+  "_id": "react-native-image-sequence@0.6.0",
+  "_inBundle": false,
+  "_integrity": "sha1-WBmYJZFbYJPFGbYYaM44QZV7uW0=",
+  "_location": "/react-native-image-sequence",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "tag",
+    "registry": true,
+    "raw": "react-native-image-sequence@latest",
+    "name": "react-native-image-sequence",
+    "escapedName": "react-native-image-sequence",
+    "rawSpec": "latest",
+    "saveSpec": null,
+    "fetchSpec": "latest"
   },
-  "version": "0.6.0",
-  "description": "A <ImageSequence> component for react-native",
+  "_requiredBy": [
+    "#USER",
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/react-native-image-sequence/-/react-native-image-sequence-0.6.0.tgz",
+  "_shasum": "58199825915b6093c519b61868ce3841957bb96d",
+  "_spec": "react-native-image-sequence@latest",
+  "_where": "/Users/umberto/Documents/Projects/React-Native/MulinoPerMe",
   "author": {
     "name": "Mads Lee Jensen",
     "email": "madsleejensen@gmail.com",
     "url": "http://mads-lee.dk"
   },
-  "peerDependencies": {
-    "react-native": ">=0.47.0",
-    "prop-types": ">=15.5.0"
+  "bugs": {
+    "url": "https://github.com/madsleejensen/react-native-image-sequence/issues"
   },
-  "license": "MIT",
+  "bundleDependencies": false,
+  "deprecated": false,
+  "description": "A <ImageSequence> component for react-native",
   "homepage": "https://github.com/madsleejensen/react-native-image-sequence",
   "keywords": [
     "react-native",
@@ -26,5 +44,16 @@
     "frame-animation",
     "animation",
     "animationImages"
-  ]
+  ],
+  "license": "MIT",
+  "name": "react-native-image-sequence",
+  "peerDependencies": {
+    "react-native": ">=0.47.0",
+    "prop-types": ">=15.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/madsleejensen/react-native-image-sequence.git"
+  },
+  "version": "0.6.0"
 }
